# Portfolio

./: .gitignore  CMakeLists.txt
Qml/: Main.qml
Ressources/data/: education.json  experiences.json  profile.json  skills.json
Src/: main.cpp
Src/models/: Educationmodel.cpp  Educationmodel.h  ExperienceModel.cpp  ExperienceModel.h  ExperienceModel.hpp  ProfileModel.cpp  ProfileModel.h  SkillModel.h  SkillModel.hpp  Skillmodel.cpp
Src/services/: DataLoader.cpp  DataLoader.h
